--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     <h2>Layout & Sections</h2>
                     <ul>
                         <li><strong>&lt;header&gt;</strong> - Defines a header.</li>
+                        <li><strong>&lt;main&gt;</strong> - Defines a main.</li>
                         <li><strong>&lt;footer&gt;</strong> - Defines a footer.</li>
                         <li><strong>&lt;section&gt;</strong> - Groups related content.</li>
                         <li><strong>&lt;article&gt;</strong> - Self-contained content.</li>
